--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,20 +15,31 @@ a, a:hover, a:focus, a:active {
 
 .header {
   &__container {
-    height: 655px;
-    display: grid;
-    grid-template-columns: 1fr repeat(12, 70px) 1fr;
-    grid-template-rows: 206px auto 1fr;
-    column-gap: 30px;
-    grid-row-gap: 0px;
+      height: 655px;
+      display: grid;
+      grid-template-columns: 1fr repeat(12, 70px) 1fr;
+      grid-template-rows: 206px auto 1fr;
+      column-gap: 30px;
+      grid-row-gap: 0px;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       height: 384px;
       grid-template-columns: repeat(6, 90px);
       grid-template-rows: 127px repeat(2, auto);
       column-gap: 30px;
       margin-left: calc((100vw - 690px)/2);
       overflow-x: hidden;
+    }
+
+    @media (max-width: 689px) {
+      all: revert;
+      display: flex;
+      flex-direction: column;
+      background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+      background-size: 100% auto;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 553px;
     }
   }
 
@@ -37,9 +48,20 @@ a, a:hover, a:focus, a:active {
     margin-left: -17px;
     margin-top: 45px;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 1;
       margin-left: 0px;
+    }
+
+    @media (max-width: 689px) {
+      all: revert;
+      position: absolute;
+      margin: 33px 0 0 23px;
+      height: 12px;
+
+      & img {
+        height: 100%;
+      }
     }
   }
 
@@ -53,11 +75,20 @@ a, a:hover, a:focus, a:active {
     grid-area: 2 / 2 / 3 / 3;
     margin-left: -20px;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 2 / 1 / 3 / 4;
       font-size: 54px;
       line-height: 65px;
       margin-left: 0;
+    }
+
+    @media (max-width: 689px) {
+      display: block;
+      position: relative;
+      margin: 97vw auto 0;
+      line-height: 45px;
+      font-size: 45px;
+      text-align: center;
     }
   }
 
@@ -74,9 +105,15 @@ a, a:hover, a:focus, a:active {
     justify-content: space-between;
     align-items: center;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 3 / 1;
       margin-top: 38px;
+    }
+
+    @media (max-width: 689px) {
+      margin-top: 20px;
+      height: 50px;
+      width: 279px;
     }
 
     &__title {
@@ -88,6 +125,12 @@ a, a:hover, a:focus, a:active {
       font-size: 16px;
       line-height: 100%;
       text-align: center;
+
+      @media (max-width: 689px) {
+        width: 230px;
+        height: 50px;
+        line-height: 50px;
+      }
     }
 
     &__play {
@@ -95,6 +138,10 @@ a, a:hover, a:focus, a:active {
       height: 100%;
       width: 68px;
       background-color: #1a5a4c;
+
+      @media (max-width: 689px) {
+        width: 50px;
+      }
     }
   }
 
@@ -116,7 +163,11 @@ a, a:hover, a:focus, a:active {
     text-transform: uppercase;
     color: #687480;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
+      display: none;
+    }
+
+    @media (max-width: 689px) {
       display: none;
     }
 
@@ -140,9 +191,12 @@ a, a:hover, a:focus, a:active {
     grid-row: 1 / 6;
     overflow-x: visible;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 4 / 4 / span 4;
-      
+    }
+
+    @media (max-width: 689px) {
+      display: none;
     }
   }
 
@@ -153,7 +207,6 @@ a, a:hover, a:focus, a:active {
     grid-row: 1 / 1;
     height: 72px;
     width: 170px;
-    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -164,9 +217,19 @@ a, a:hover, a:focus, a:active {
     text-align: center;
     color: #0F0E08;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 4 / 1 / 6;
       width: 220px;
+    }
+
+    @media (max-width: 689px) {
+      position: absolute;
+      width: 55px;
+      font-size: 30px;
+      line-height: 30px;
+      text-align: left;
+      top: -12px;
+      left: 40%;
     }
   }
 }
@@ -176,9 +239,15 @@ a, a:hover, a:focus, a:active {
   margin: 200px auto 0;
   width: 1170px;
 
-  @media (max-width: 1245px) {
+  @media (min-width: 690px) and (max-width: 1245px) {
     margin-top: 88px;
     width: 690px;
+  }
+
+  @media (max-width: 689px) {
+    all: revert;
+    width: 280px;
+    margin: -30px auto 0;
   }
 
   &__title {
@@ -188,6 +257,13 @@ a, a:hover, a:focus, a:active {
     line-height: 100%;
     color: #0F0E08;
     margin-bottom: 56px;
+
+    @media (max-width: 689px) {
+      line-height: 36px;
+      font-size: 36px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
   }
 
   &__event {
@@ -195,13 +271,17 @@ a, a:hover, a:focus, a:active {
     flex-direction: row;
     margin-bottom: 104px;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       flex-direction: column;
       margin-bottom: 64px;
 
       &:last-child {
         margin-bottom: 112px;
       }
+    }
+
+    @media (max-width: 689px) {
+      flex-direction: column;
     }
 
     &-type {
@@ -257,7 +337,7 @@ a, a:hover, a:focus, a:active {
       color: #4E4E4E;
       margin-top: 15px;
 
-      @media (max-width: 1245px) {
+      @media (min-width: 690px) and (max-width: 1245px) {
         width: calc(90px * 4 + 30px * 3);
       }
     }
@@ -268,9 +348,19 @@ a, a:hover, a:focus, a:active {
     height: 520px;
     min-width: 670px;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       width: 100%;
       height: 100%;
+    }
+
+    @media (max-width: 689px) {
+      min-width: none;
+      height: auto;
+      min-width: 280px;
+
+      & img {
+        width: 280px;
+      }
     }
   }
 
@@ -283,10 +373,19 @@ a, a:hover, a:focus, a:active {
     padding-left: 130px;
     flex-direction: column;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       height: auto;
       margin-top: 44px;
       padding-left: 0;
+    }
+
+    @media (max-width: 689px) {
+      all: revert;
+      display: block;
+      height: auto;
+      width: 280px;
+      padding-left: 0;
+      margin: 0;
     }
   }
 }
@@ -298,7 +397,7 @@ a, a:hover, a:focus, a:active {
   &__background img {
     width: 100%;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       width: 690px;
       height: max-content;
       display: block;
@@ -315,7 +414,7 @@ a, a:hover, a:focus, a:active {
     padding: 45px 100px 0;
     box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       margin-bottom: 88px;
     }
   }
@@ -366,7 +465,7 @@ a, a:hover, a:focus, a:active {
   justify-items: center;
   align-content: start;
 
-  @media (max-width: 1245px) {
+  @media (min-width: 690px) and (max-width: 1245px) {
     background-image: url(../images/subscription_iPad.jpg);
     height: 380px;
   }
@@ -376,7 +475,7 @@ a, a:hover, a:focus, a:active {
     margin-top: 163px;
     margin-bottom: 16px;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       margin-top: 82px;
     }
   }
@@ -399,7 +498,7 @@ a, a:hover, a:focus, a:active {
     display: flex;
     justify-content: space-between;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       margin-top: 64px;
     }
 
@@ -456,7 +555,7 @@ textarea:focus, input:focus {
   padding-top: 47px;
   padding-bottom: 35px;
 
-  @media (max-width: 1245px) {
+  @media (min-width: 690px) and (max-width: 1245px) {
     grid-template-columns: repeat(6, 90px);
     grid-template-rows: 134px min-content auto auto auto;
     padding-top: 51px;
@@ -498,7 +597,7 @@ textarea:focus, input:focus {
     font-size: 12px;
     color: #0F0E08;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-column: 1 / 7;
       grid-row: 5;
       margin: 110px 0 36px;
@@ -514,7 +613,7 @@ textarea:focus, input:focus {
     line-height: 150%;
     color: #0F0E08;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 2 / 3 / 4;
     }
   }
@@ -528,7 +627,7 @@ textarea:focus, input:focus {
     line-height: 150%;
     color: #0F0E08;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 4 / 3 / 6;
     }
   }
@@ -541,7 +640,7 @@ textarea:focus, input:focus {
     background-color: rgba(26, 90, 76, 0.5);
     margin-left: 35px;
 
-    @media (max-width: 1245px) {
+    @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 3 / 2 / 4 / 6;
       height: 1px;
       width: calc((4*90px + 3*30px));
@@ -576,7 +675,7 @@ textarea:focus, input:focus {
   }
 }
 
-@media (max-width: 1245px) {
+@media (min-width: 690px) and (max-width: 1245px) {
   .gallery {
     display: none;
   }
@@ -589,7 +688,9 @@ textarea:focus, input:focus {
   .slider {
     display: block;
     justify-content: center;
-    width: 100%;
+    width: 690px;
+    overflow-x: hidden;
+    margin: 0 auto;
 
     &__title {
       width: 690px;
@@ -640,5 +741,19 @@ textarea:focus, input:focus {
     width: calc(10% - 10px);
     height: 543px;
     margin-right: 20px;
+  }
+}
+
+@media (max-width: 689px) {
+  .page {
+    background-color:red;
+  }
+
+  .lecture, .gallery, .subscription, .slider {
+    display: none;
+  }
+
+  .footer {
+    display: none;
   }
 }
