--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -66,6 +66,7 @@
     font-size: 14px;
     line-height: 14px;
     border: none;
+    border-radius: 0;
     outline: 0;
     transition: all 0.3s;
 
