--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -23,7 +23,7 @@ select:-webkit-autofill:focus {
   background-color: $background-c-white;
   -webkit-text-fill-color: $c-black;
   -webkit-box-shadow: none;
-  border-radius: 0;
+  border-radius: none;
   transition: background-color 5000s ease-in-out 0s;
 
   border: none;
