--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,977 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+.body {
+  background: white;
+  max-Width: 1280px;
+  margin: 0 auto;
+  min-Height: 100vh;
+}
+
+
+.header {
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+
+}
+
+.header_first-block {
+  width: 100%; /* Note: You have two height properties, you may want to remove one depending on your design */
+  position: relative;
+}
+
+.header_second-block {
+  background-image: url(../images/header-image.jpg);
+  height: 700px;
+  width: 100%; /* Set width to 100% to stretch across the entire width of the page */
+  background-repeat: no-repeat;
+  background-size: cover; /* Adjust to cover the entire container while maintaining aspect ratio */
+  background-position: center center; /* Center the image both horizontally and vertically */
+  transform: scaleX(-1); /* Flip the element horizontally */
+  align-items:flex-end;
+  overflow: hidden;
+}
+
+.header_logo{
+  margin-top: 39px;
+  margin-left: 55px;
+}
+
+.header_title{
+  color: #000;
+  width: 470px;
+font-family: Montserrat;
+font-size: 72px;
+font-style: normal;
+font-weight: 700;
+line-height: 120%; /* 86.4px */
+margin-top: 154px;
+margin-bottom: 89px;
+margin-left: 55px;
+}
+
+.header_second-name{
+  transform: scaleX(-1); /* Flip the element horizontally */
+display:flex;
+margin-left: -55px;
+margin-top: 15px;
+width: 100%;
+height: 72px;
+color: #0F0E08;
+text-align: center;
+font-family: Montserrat;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 36px */
+color: #0F0E08;
+position: relative;
+
+text-align: center;
+font-family: Montserrat;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 36px */
+}
+
+.header_tickets-wrapper{
+  width: 100%;
+  display:flex;
+  justify-content: end;
+}
+.header_tickets{
+  display: flex;
+  justify-content: flex-end;
+width: 269px;
+height: 70px;
+justify-content: flex-end;
+align-items: center;
+flex-shrink: 0;
+border: 1px solid #1A5A4C;
+margin-right: 30px;
+}
+
+.header_tickets-text{
+  color: #0F0E08;
+
+font-family: IBM Plex Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 100%; /* 16px */
+}
+
+.header_tickets div{
+  width: 25%;
+}
+
+.header_chevron-right{
+  display: flex;
+background-color: #1A5A4C;
+height: 100%;
+}
+
+.header_tickets-chevron{
+  display:flex;
+  height: 100%;
+  background-image: url(../images/chevron-right.svg);
+  background-repeat: no-repeat;
+  background-color: #1A5A4C;
+  background-size: 24px 24px; /* width height */
+  background-position: center;
+}
+
+
+
+.header_events{
+
+display: flex;
+align-items: center;
+transform: rotate(-90deg);
+  transform-origin: left bottom; /* Определение точки вращения (левый нижний угол) */
+  position: absolute; /* Позиционирование внутреннего блока относительно родителя */
+  bottom: 0px; /* Размещение блока внизу */
+  margin-left: 55px;
+}
+
+.main_gallery-dots{
+  width: 102px;
+  display:flex;
+  justify-content: space-between;
+}
+
+.main_gallery-dot{
+  background-color: #e0e0e0;
+  border-radius: 50%;
+  width: 9px;
+  height: 9px;
+  display: none;
+}
+
+.main_gallery-dot-active{
+  background-color: #1a5a4c;
+  border-radius: 50%;
+  width: 9px;
+  height: 9px;
+  display: none;
+}
+
+.header_events-line{
+  display:flex;
+  width: 70px;
+height: 1px;
+background: #1A5A4C;
+color: #1A5A4C;
+align-items: center;
+margin-right: 20px;
+}
+
+.header_events-text{
+  height: 14px;
+  width: 43px;
+  color: #687480;
+
+font-family: IBM Plex Sans;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 14px */
+}
+
+.main_event{
+  display:flex;
+  align-items: center;
+  margin-left: 55px;
+  margin-bottom: 52px;
+  margin-top: 52px;
+}
+
+.banner{
+  width: 100%;
+  position: relative;
+}
+
+.relative{
+  position: relative;
+}
+
+.main_flex{
+  display:flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.main_class{
+  z-index: 1;
+  background: #fff;
+  flex-direction: column;
+  align-items: center;
+  width: 570px;
+  height: 204px;
+  display: flex;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 2px #1a5a4c40;
+}
+
+.main_gallery-img1, .main_gallery-img3{
+  margin-left: 55px;
+  margin-right: 30px;
+}
+
+.main_gallery-img1, .main_gallery-img2, .main_gallery-img3, .main_gallery-img4{
+  margin-top: 30px;
+}
+
+.main_gallery-img3, .main_gallery-img4{
+  margin-bottom: 200px;
+}
+
+.actualevents{
+margin-top: 200px
+}
+
+.main_class_name{
+  color: #687480;
+
+font-family: IBM Plex Sans;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 100%; /* 14px */
+margin-right: 210px;
+}
+
+.main_class-name{
+  color: #0F0E08;
+
+font-family: Montserrat;
+font-size: 36px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%; /* 36px */
+margin-left: 102px;
+}
+
+.main_title{
+  color: #0F0E08;
+
+font-family: Montserrat;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 48px */
+margin-left: 55px;
+margin-top: 200px;
+}
+
+.main_event-time{
+  display:flex;
+  align-items: center;
+  width: 170px;
+height: 15px;
+}
+
+.event_time{
+  color: #1A5A4C;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 150%; /* 21px */
+}
+
+.main_event1-image{
+  width: 100%;
+  max-width: 750px;
+}
+
+.main_event-name{
+  color: #687480;
+
+font-family: IBM Plex Sans;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+width: 170px;
+height: 15px;
+line-height: 100%; /* 14px */
+}
+
+.main_event-wrapper2{
+  margin-left: 130px;
+  width: 370px;
+  display:flex;
+  align-items: start;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.rectangle{
+  width: 15px;
+height: 15px;
+background: #F14A27;
+margin-left: 12px;
+}
+
+.main_event-p{
+  color: #4E4E4E;
+
+font-family: IBM Plex Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: 150%; /* 24px */
+}
+
+.main_event_div{
+  display:flex;
+  align-items: center;
+}
+
+.main_event-h1{
+  color: #0F0E08;
+font-family: Montserrat;
+font-size: 36px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%; /* 36px */
+}
+
+.subscribe{
+  display:flex;
+  flex-direction: column;
+  background-image: url(../images/footer.png);
+  height: 550px;
+  color:white;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer{
+  height: 457px;
+}
+
+
+
+.footer_subscribe-title{
+  color: #FFF;
+
+text-align: center;
+font-family: Montserrat;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 48px */
+margin-bottom: 0px;
+}
+
+.footer_subscribe-subtitle{
+  color: #FFF;
+  text-align: center;
+  font-family: "IBM Plex Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 18px */
+}
+.footer_subscribe-textarea {
+  width: 470px;
+  height: 64px;
+  background: #FFF;
+  text-align: center; /* Center horizontally */
+  line-height: 63px; /* Equal to the height for vertical centering */
+  resize: none;
+  margin-right: 30px;
+}
+
+.footer_subscribe-textarea::placeholder {
+  text-align: left;
+  padding-left: 32px;
+  color: #687480;
+
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+
+}
+
+.footer_subscribe-button{
+  width: 70px;
+height: 70px;
+background: #F14A27;
+color: black;
+border: none;
+}
+
+.footer_subscribe-wrapper{
+  display:flex;
+
+}
+
+.footer_aboutus{
+  width: 1278.003px;
+height: 457px;
+}
+
+.footer-logo{
+  color: #0F0E08;
+
+font-family: Montserrat;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 36px */
+margin-left:55px
+}
+
+.img-instagram{
+  margin-left: 22px;
+}
+
+.footer_social-img{
+  margin-left: 55px;
+  margin-top: 62px;
+}
+
+.footer_block1{
+  margin-top: 47px;
+}
+
+.footer_worktime{
+  color: #0F0E08;
+font-family: "IBM Plex Sans";
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%;
+width: 170px;
+height: 231px;
+}
+
+.footer_block2{
+  margin-left: 130px;
+  margin-top: 47px;
+}
+.footer_content{
+  display:flex;
+}
+
+.footer_worktime-titles{
+  color: #0F0E08;
+  font-family: "IBM Plex Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140.625%; /* 19.688px */
+}
+
+.footer_block3{
+  margin-left: 31px;
+  margin-top: 47px;
+  width: 169px;
+}
+
+.footer_contacts-content{
+  color: #0F0E08;
+  font-family: "IBM Plex Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 21px */
+}
+
+.footer-line{
+  width: 1px;
+  height: 240px;
+background: rgba(26, 90, 76, 0.50);
+margin-top: 47px;
+margin-left: 65px;
+}
+
+.footer_contacts{
+  margin-top: 0px;
+}
+
+
+.footer_block4{
+  display:flex;
+  flex-direction: column;
+  margin-top: 46px;
+  margin-left: 65px;
+}
+
+.footer_block5{
+  display:flex;
+  flex-direction: column;
+  margin-left: 31px;
+  margin-top: 47px;
+}
+
+.footer_copyrights{
+  display:flex;
+  justify-content: space-between;
+  color: #0F0E08;
+  margin-top: 87px;
+
+font-family: "IBM Plex Sans";
+font-size: 12px;
+font-style: normal;
+font-weight: 300;
+line-height: 140.625%; /* 16.875px */
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px){
+
+  .header_logo{
+    margin-left: 34px;
+    margin-top: 39px;
+  }
+
+  .main_gallery-img3, .main_gallery-img4{
+    display: none;
+  }
+
+  .main_gallery-img1, .main_gallery-img2{
+    width: 320px;
+height: 543px;
+flex-shrink: 0;
+margin-bottom: 32px;
+image-rendering: pixelated; /* Prevent image blurring */
+  }
+
+  .footer_subscribe-textarea {
+    width: 374px;
+height: 64px;
+  }
+
+  .footer_subscribe-subtitle{
+    margin-bottom: 54px;
+  }
+
+  .main_gallery-dots{
+    display: flex;
+    align-items: center;
+    margin-bottom: 92px;
+
+  }
+
+  .main_dots_holder{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main_gallery-dot{
+    display: flex;
+  }
+
+  .main_gallery-dot-active{
+    display: flex
+  }
+
+
+  .header_title{
+    width: 340px;
+    margin-left: 34px;
+    color: #000;
+    margin-top: 64px;
+    margin-bottom: 38px;
+
+font-family: Montserrat;
+font-size: 54px;
+font-style: normal;
+font-weight: 700;
+line-height: 120%; /* 64.8px */
+  }
+
+  .header_second-block{
+    width: 50vw;
+max-height: 384px;
+min-height: auto;
+  }
+
+  .header_second-name{
+    margin-left: -75px;
+  }
+
+  .header_first-block{
+    width: 50vw;
+  }
+  .header_tickets-wrapper {
+    justify-content: flex-start;
+    margin-left: 38px;
+  }
+
+  .header_events{
+    display: none;
+  }
+
+  .header_tickets{
+    height: 65px;
+  }
+  .main_event {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .main_event-wrapper2 {
+    margin-left: 0px;
+    margin-top: 44px
+  }
+
+  .main_event-h1{
+    margin-bottom: 15px;
+    margin-top: 32px;
+  }
+
+  .main_event-p {
+    width: 460px;
+  }
+
+  .main_class {
+
+  }
+
+  .section2{
+
+  }
+
+  .section2_div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main_flex{
+    margin-top: 20px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    .main_event1-image {
+        width: 100%; /* 70% от ширины viewport */
+        max-width: 700px; /* Максимальная ширина в пикселях, чтобы избежать слишком больших изображений */
+    }
+}
+
+.main_acutal-events {
+  margin-left: -21px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+  .footer{
+    width: 768px;
+  }
+
+  .footer_block2{
+    margin-left: 40px;
+  }
+
+  .footer_block1{
+    margin-left: 0px;
+  }
+
+  .footer_social-img {
+    display:flex;
+  }
+
+  .footer_contacts-content {
+    width: 220px;
+  }
+
+  .footer_content{
+    flex-wrap: wrap;
+    position: relative;
+  }
+
+  .footer-line{
+    width: 1px;
+height: 432px;
+transform: rotate(-90deg);
+top: 17.5%;
+position: absolute;
+left: 41.3%
+  }
+
+  .footer_block4{
+    margin-top: 129px;
+    margin-left: 168px;
+    width: 200px;
+  }
+
+  .footer_block5{
+    margin-top: 129px;
+    margin-left: 0px;
+  }
+
+  .footer_contacts{
+    width: 220px;
+  }
+
+  .footer_copyrights{
+    margin-left: 65px;
+    margin-right: 65px;
+  }
+
+  .footer_copyrights2{
+  }
+}
+
+
+
+
+@media screen and (min-width: 0px) and (max-width: 767px){
+  .header{
+    flex-direction: column-reverse;
+  }
+  .header_first-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .header_events {
+    display: none;
+  }
+
+  .header_second-name {
+    margin-left: -132px;
+  }
+
+  .main_gallery-img3, .main_gallery-img4{
+    display: none;
+  }
+
+  .main_gallery-img1, .main_gallery-img2{
+    width: 85%;
+height: 543px;
+flex-shrink: 0;
+margin-bottom: 32px;
+image-rendering: pixelated; /* Prevent image blurring */
+  }
+
+  .main_dots_holder{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main_class{
+    width: 90%;
+    height: 140px;
+  }
+
+  .main_class_name {
+    margin-right:84px
+  }
+
+  .main_gallery-img1, .main_gallery-img2{
+    margin-left:20px;
+  }
+
+  .footer_subscribe-textarea {
+    width: 60%;
+    margin-right: 0px;
+  }
+
+  .footer_subscribe-wrapper {
+    width: 80%;
+  }
+
+  .main_gallery-dots{
+    margin-bottom: 100px;
+  }
+
+  .main_gallery-img2 {
+    margin-bottom: 20px;;
+  }
+
+  .main_class-name{
+    color: #0F0E08;
+    margin-top: 0px;
+
+text-align: center;
+font-family: Montserrat;
+font-size: 28px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%; /* 28px */
+margin-left: 0px;
+  }
+
+  .main_gallery-dot{
+    display:flex;
+  }
+
+  .main_gallery-dot-active{
+    display:flex;
+  }
+
+
+
+  .main_acutal-events{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main_title{
+    margin-bottom: 0px;
+    align-self: center;
+  }
+
+  .main_event-wrapper2 {
+    width: 100%;
+    margin-left: 0px;
+  }
+
+  .main_event {
+    margin-left: 20px;
+  }
+
+  .header_logo{
+    position: absolute;
+    top: -385%;
+    left: 0;
+    transform: translateY(50%);
+    z-index: 99;
+    margin-left: 20px;
+  }
+
+  .header_title{
+    max-width: 280px;
+height: 93px;
+flex-shrink: 0;
+color: #000;
+
+text-align: center;
+font-family: Montserrat;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 45px */
+margin-left: 20px;
+margin-top: 20px;
+margin-bottom: 20px;
+  }
+
+  .header_tickets{
+    width: 280px;
+height: 50px;
+
+}
+
+.header_tickets-wrapper{
+  justify-content: start;
+  margin-left: 20px;
+  width: 282px;
+}
+
+
+.main_event{
+  flex-direction: column;
+}
+
+  .footer_social-img {
+  display:flex;
+  }
+
+  .footer{
+    position: relative;
+height: 931px;
+  }
+
+  .footer_social-img {
+    margin-top: 0px;
+    margin-right: 20px;
+  }
+
+  .footer_block1{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .footer-logo {
+  margin-left: 20px;
+  }
+
+  .footer_content{
+    flex-direction: column;
+  }
+
+  .footer_block2 {
+    margin-left: 20px;
+    width: 130px;
+
+  }
+
+  .footer_worktime{
+    width: 130px;
+  }
+
+  .footer_block3 {
+    position: absolute;
+    top: 17.8%;
+    left: 60%;
+    margin:0;
+    width: 128px
+}
+
+.footer-line {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  background: #1a5a4c80;
+  width: 90%;
+  height: 1px;
+  margin-top: 47px;
+  margin-left: 20px;
+  top: 65%;
+}
+
+.footer_block4{
+  position: absolute;
+  bottom: 20%;
+  left: 20px;
+  flex-direction: column;
+  margin-top: 0px;
+  margin-left: 0px;
+  display: flex;
+}
+
+.footer_block5{
+  position: absolute;
+    margin-top: 0px;
+    margin-left: 0px;
+    bottom: 20%;
+    left: 60%
+}
+
+.footer_copyrights{
+  flex-direction: column;
+  position: absolute;
+  align-items: center;
+  bottom: 5%;
+  left: 20%;
+  margin: auto;
+  justify-content: center;
+  color: #0f0e08;
+  justify-content: space-evenly;
+  /* margin-top: 87px; */
+  font-family: IBM Plex Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 140.625%;
+  display: flex;
+}
 }
